--- a/dtl.html
+++ b/dtl.html
@@ -1324,7 +1324,7 @@
     function renderTaskTable(container) {
         const tasks = getTasksForViewDate();
         const wrapper = document.createElement('div');
-        wrapper.className = 'bg-white rounded-lg shadow-md';
+        wrapper.className = 'bg-white shadow-md';
 
         const tableContainer = document.createElement('div');
         tableContainer.className = 'overflow-x-auto';
