--- a/dtl.html
+++ b/dtl.html
@@ -1417,7 +1417,7 @@
                     <div class="flex items-center justify-between">
                         <div class="flex items-center space-x-1 min-w-0">
                             <span class="inline-block w-2 h-2 rounded-full flex-shrink-0" style="background-color: ${project.color};"></span>
-                            <span class="pl-1 font-semibold truncate" title="${escapeHtml(task.name || '')}">${formatTaskName(task.name)}</span>
+                            <span class="pl-1 font-semibold text-sm truncate" title="${escapeHtml(task.name || '')}">${formatTaskName(task.name)}</span>
                             ${memoIcon}
                         </div>
                         <span class="text-xs text-gray-400 ml-2 whitespace-nowrap flex-shrink-0 project-label">${escapeHtml(project.name)}</span>
