--- a/dtl.html
+++ b/dtl.html
@@ -75,7 +75,7 @@
             font-size: 0.8rem;
         }
         .task-table th, .task-table td {
-             padding-top: 0.1rem;
+             padding-top: 0.25rem;
              padding-bottom: 0.1rem;
              padding-left: 0.5rem;
              padding-right: 0.5rem;
@@ -1597,8 +1597,8 @@
                     <td class="py-2 px-3 text-sm font-mono whitespace-nowrap">
                          ${formatTime(calculateActualTime(task))}
                     </td>
-                    <td class="py-2 px-3 text-sm whitespace-nowrap">${task.startTime ? formatClockTime(new Date(task.startTime)) : '--:--'}</td>
-                    <td class="py-2 px-3 text-sm whitespace-nowrap">${task.endTime ? formatClockTime(new Date(task.endTime)) : '--:--'}</td>
+                    <td class="py-2 px-3 text-sm font-mono whitespace-nowrap">${task.startTime ? formatClockTime(new Date(task.startTime)) : '--:--'}</td>
+                    <td class="py-2 px-3 text-sm font-mono whitespace-nowrap">${task.endTime ? formatClockTime(new Date(task.endTime)) : '--:--'}</td>
                     <td class="py-2 px-3 text-center space-x-1">
                         <button class="edit-archived-task-btn text-gray-400 hover:text-blue-500 p-1" data-task-id="${task.id}" data-date-key="${state.archiveViewDate}" title="編集">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"></path></svg>
@@ -1735,8 +1735,8 @@
             tableHtml += `<td class="py-2 px-3 task-memo-cell">${formatTaskName(task.name)}${memoHtml}</td>`;
             tableHtml += `<td class="py-2 px-3">${escapeHtml(project.name)}</td>`;
             tableHtml += `<td class="py-2 px-3 font-mono">${formatTime(calculateActualTime(task))}</td>`;
-            tableHtml += `<td class="py-2 px-3">${task.startTime ? formatClockTime(new Date(task.startTime)) : '--:--'}</td>`;
-            tableHtml += `<td class="py-2 px-3">${task.endTime ? formatClockTime(new Date(task.endTime)) : '--:--'}</td>`;
+            tableHtml += `<td class="py-2 px-3 font-mono">${task.startTime ? formatClockTime(new Date(task.startTime)) : '--:--'}</td>`;
+            tableHtml += `<td class="py-2 px-3 font-mono">${task.endTime ? formatClockTime(new Date(task.endTime)) : '--:--'}</td>`;
             tableHtml += `</tr>`;
         });
 
