--- a/dtl.html
+++ b/dtl.html
@@ -22,6 +22,7 @@
                 box-shadow: 0 2px 4px rgba(0,0,0,0.1);
             }
 			.sections-wrapper { padding-bottom:88px; }
+			main { max-width: 980px; margin: 0 auto; }
         }
         
         /* Compact header for mobile */
