--- a/dtl.html
+++ b/dtl.html
@@ -177,7 +177,7 @@
 <body class="antialiased text-gray-800">
 
 <div class="header">
-    <div class="container mx-auto max-w-7xl">
+    <div class="container mx-auto">
         <header class="mobile-compact-header bg-white p-4 pb-1 flex flex-col md:flex-row justify-between items-center header-content">
             <div class="flex-1">
                 <h1 class="text-xl font-bold text-gray-700">DailyTaskList</h1>
@@ -189,7 +189,7 @@
             </div>
         </header>
 
-        <nav class="mobile-nav flex space-x-0 border-b-2 border-gray-200 overflow-x-auto">
+        <nav class="mobile-nav flex space-x-0 overflow-x-auto">
             <button class="tab-link text-sm md:text-base py-1 px-4 text-gray-600 hover:bg-gray-100 hover:text-blue-600 transition-colors duration-200 flex-shrink-0" data-tab="today">当日のタスク</button>
             <button class="tab-link text-sm md:text-base py-1 px-4 text-gray-600 hover:bg-gray-100 hover:text-blue-600 transition-colors duration-200 flex-shrink-0" data-tab="repeat">リピートタスク</button>
             <button class="tab-link text-sm md:text-base py-1 px-4 text-gray-600 hover:bg-gray-100 hover:text-blue-600 transition-colors duration-200 flex-shrink-0" data-tab="projects">プロジェクト</button>
