--- a/dtl.html
+++ b/dtl.html
@@ -2866,11 +2866,11 @@
         currentDateEl.textContent = new Date().toLocaleString('ja-JP', { year:'numeric', month:'long', day:'numeric', weekday:'long' });
         calculateAllEstimates();
     }
-    function formatTime(seconds) {
+	function formatTime(seconds) {
         const s = parseInt(seconds, 10) || 0;
-        const m = Math.floor((s % 3600) / 60).toString().padStart(2,'0');
+        const m = Math.floor(s / 60);
         const sec = (s % 60).toString().padStart(2,'0');
-        return `${m}:${sec}`;
+        return `${m.toString().padStart(2, '0')}:${sec}`;
     }
     function formatClockTime(date) {
         if (!date) return '--:--';
