リピートタスクの重複を修正

--- a/dtl.html
+++ b/dtl.html
@@ -500,8 +500,9 @@
                         const taskMap = new Map();
 
                         for (const task of combinedTasks) {
-                            // All tasks are now keyed by their unique ID.
-                            const key = `task-${task.id}`;
+                            const key = (task.originRepeatId && getTaskStatus(task) !== 'completed')
+                                ? `repeat-${task.originRepeatId}`
+                                : `task-${task.id}`;
 
                             if (!taskMap.has(key)) {
                                 taskMap.set(key, task);
