再ログインをスムーズに

--- a/dtl.html
+++ b/dtl.html
@@ -444,6 +444,10 @@
 </div>
 
 <div id="toast-notification" class="fixed top-5 right-1 bg-green-600 text-white mx-2 py-2 px-4 rounded-lg shadow-md transition-all duration-500 ease-in-out transform -translate-y-20 opacity-0 z-[2000]"></div>
+<div id="reauth-notification" class="fixed top-5 right-1 bg-yellow-500 text-white mx-2 py-2 px-4 rounded-lg shadow-md transition-all duration-500 ease-in-out transform -translate-y-20 opacity-0 z-[2000] items-center gap-3 hidden">
+    <span>Dropboxの再ログインが必要です。</span>
+    <button id="reauth-button" class="bg-white text-yellow-600 font-bold py-1 px-3 rounded-lg hover:bg-yellow-100">再ログイン</button>
+</div>
 
 <script src="https://unpkg.com/dropbox/dist/Dropbox-sdk.min.js"></script>
 
@@ -463,7 +467,27 @@
             authStatusEl: document.getElementById('auth-status'),
             driveStatusEl: document.getElementById('drive-status'),
             syncDataFab: document.getElementById('sync-data-fab'),
+            reauthNotification: document.getElementById('reauth-notification'),
+            reauthButton: document.getElementById('reauth-button'),
 
+            updateReauthUi: function(show) {
+                if (show) {
+                    this.reauthNotification.classList.remove('hidden');
+                    // 少し遅延させてから表示アニメーションを開始
+                    setTimeout(() => {
+                        this.reauthNotification.classList.remove('-translate-y-20', 'opacity-0');
+                        this.reauthNotification.style.display = 'flex';
+                    }, 50);
+                } else {
+                    this.reauthNotification.classList.add('-translate-y-20', 'opacity-0');
+                    // アニメーション完了後に非表示にする
+                    setTimeout(() => {
+                        this.reauthNotification.classList.add('hidden');
+                        this.reauthNotification.style.display = 'none';
+                    }, 500);
+                }
+            },
+			
             updateAuthUi: function(isLoggedIn) {
                 this.authContainer.classList.toggle('hidden', isLoggedIn);
                 this.signoutContainer.classList.toggle('hidden', !isLoggedIn);
@@ -567,6 +591,11 @@
                     } else {
                         console.error('Error loading state from Dropbox:', error);
                         this.driveStatusEl.textContent = `読み込みエラー: ${error.error?.error_summary || 'Unknown error'}`;
+						const errorSummary = error.error?.error_summary || '';
+                        if (error.status === 401 || errorSummary.includes('expired_access_token')) {
+                            this.updateReauthUi(true);
+                            this.driveStatusEl.textContent = '認証が切れました。再ログインしてください。';
+                        }
                     }
                 }
             },
@@ -608,6 +637,7 @@
                      if (error.status === 401) { // 認証エラー
                            this.updateAuthUi(false);
                            this.driveStatusEl.textContent = '認証が切れました。再ログインしてください。';
+						   this.updateReauthUi(true);
                     }
                 }
             }
@@ -628,6 +658,9 @@
 		    }
 		
 		    const dbx = new Dropbox.Dropbox({ clientId: DROPBOX_CLIENT_ID });
+			dailyTaskListApp.reauthButton.addEventListener('click', () => {
+                dailyTaskListApp.authorizeButton.click();
+            });
 		
 		    // URLに認証コードがあるか確認 (OAuthリダイレクト後)
 		    const urlParams = new URLSearchParams(window.location.search);
@@ -656,6 +689,7 @@
 		            dbx.auth.setAccessToken(accessToken);
 		            dailyTaskListApp.dbx = dbx;
 		            dailyTaskListApp.updateAuthUi(true);
+					dailyTaskListApp.updateReauthUi(false);
 		            dailyTaskListApp.loadStateFromDropbox();
 		        } catch (error) {
 		            console.error('Error getting access token from code:', error);
@@ -675,6 +709,7 @@
 		            try {
 		                await dbx.usersGetCurrentAccount();
 		                dailyTaskListApp.updateAuthUi(true);
+						dailyTaskListApp.updateReauthUi(false);
 		                dailyTaskListApp.loadStateFromDropbox();
 		            } catch (error) {
 		                // トークンが無効だった場合
@@ -682,6 +717,7 @@
 		                localStorage.removeItem('dropbox_access_token');
 		                dailyTaskListApp.dbx = null;
 		                dailyTaskListApp.updateAuthUi(false);
+						dailyTaskListApp.updateReauthUi(true);
 		            }
 		        } else {
 		            dailyTaskListApp.updateAuthUi(false);
@@ -728,6 +764,7 @@
 		            localStorage.removeItem('dropbox_access_token');
 		            dailyTaskListApp.dbx = null;
 		            dailyTaskListApp.updateAuthUi(false);
+					dailyTaskListApp.updateReauthUi(false);
 		        }
 		    });
 		}
